--- a/Personal_portfolio_style.css
+++ b/Personal_portfolio_style.css
@@ -2,24 +2,69 @@ body {
   background-color: #24305e;
   color: #f76c6c;
 }
-
+.navbar {
+  background-image: url("https://images.unsplash.com/photo-1610989001873-03968eed0f08?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1415&q=80");
+  width: 100%;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+#welcom-section {
+  color: #ffffff;
+  background-image: url("https://images.unsplash.com/photo-1610989001873-03968eed0f08?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1415&q=80");
+  opacity: 0.8;
+  z-index: -1;
+  margin-top: -58px;
+  width: 100%;
+  height: 600px;
+  text-align: center;
+  padding-top: 260px;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-attachment: fixed;
+}
+#welcom-h1 {
+  transition: 0.5s;
+}
+#projects {
+  background-color: #374785;
+  margin: 0px auto;
+  width: 90%;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: space-around;
+}
+.project_cards {
+  background-color: #24305e;
+  margin: 10px;
+  width: 400px;
+  height: 700px;
+}
+.card-describe {
+  padding: 10px;
+}
+.card-header {
+  text-align: center;
+  background-color: #f76c6c;
+  color: #ffffff;
+}
 #demobox1 {
   background-color: #a8d0e6;
-  width: 500px;
-  height: 500px;
+  width: 400px;
+  height: 400px;
 }
 #demobox2 {
   background-color: #f76c6c;
-  width: 500px;
-  height: 500px;
+  width: 400px;
+  height: 400px;
 }
 #demobox3 {
-  background-color: #374785;
-  width: 500px;
-  height: 500px;
+  background-color: #a8d0e6;
+  width: 400px;
+  height: 400px;
 }
 #demobox4 {
   background-color: #f8e9a1;
-  width: 500px;
-  height: 500px;
+  width: 400px;
+  height: 400px;
 }
